<resources>
    <string name="app_name">Catalog Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Susantokun</string>
    <string name="nav_header_subtitle">susantokun.com@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- tambahan -->
    <string name="now_playing">Now Playing</string>
    <string name="activity_detail">Detail Movie</string>
    <string name="up_coming">Up Coming</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="release_date">Release Date</string>
    <string name="title_movie">Title Movie</string>
    <string name="overview">Overview</string>
    <string name="input_title">Enter the movie title</string>

    <string name="loading">Loading...</string>
    <string name="failed_get_data">Failed to get Data!</string>
    <string name="no_internet">No Internet!</string>
    <string name="not_empty_title">The title cannot be empty!</string>
    <string name="vote_average">Rating</string>
    <string name="no_overview">Sorry for now we dont have a brief glance.</string>
</resources>
