<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_item_now_play"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent" />

            <TextView
                android:id="@+id/title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxLines="3"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/iv_poster"
                android:layout_toRightOf="@id/iv_poster"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/title_movie" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_below="@id/title_detail"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@id/iv_poster"
                android:maxLines="1"
                tools:text="@string/vote_average" />

            <TextView
                android:id="@+id/overview_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vote_average"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/iv_poster"
                android:layout_toRightOf="@id/iv_poster"
                android:maxLines="3"
                tools:text="@string/overview" />

            <TextView
                android:id="@+id/release_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@+id/iv_poster"
                android:gravity="left"
                tools:text="@string/release_date" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp">
            <Button
                android:id="@+id/btn_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/detail"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/share"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>