<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"

            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/poster_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="poster"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_image_black_24dp"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_date_range_white_24dp"
                        android:padding="10dp"
                        android:text="@string/release_date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/release_date_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFF"
                        android:padding="@dimen/detail_activity_margin"
                        android:text="@string/release_date" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_book_white_24dp"
                        android:padding="10dp"
                        android:text="@string/overview"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/title_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFF"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:paddingTop="@dimen/detail_activity_margin"
                        android:text="@string/title_movie" />

                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                        android:id="@+id/synopsis_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFF"
                        android:padding="@dimen/detail_activity_margin"
                        android:hint="@string/no_overview" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>